# universal-version-bump-demo

./: CHANGELOG.md  README.md  package.json
.github/workflows/: multi-version-bump-checker.yml  node-version-bump.yaml  universal-version-bump-node.yml
docker-demo/: Dockerfile
node-demo/: CHANGELOG.md  package.json
node-demo/.github/workflows/: version-bump.yaml
php-class-demo/: AppSettings.php
php-composer-demo/: composer.json
php-config-demo/: config.php
php-version-php-demo/: Version.php
python-setup-demo/: setup.py
python-toml-demo/: pyproject.toml
rust-demo/: Cargo.toml
