[build-system]
requires = [0.1.1, "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-demo"
0.1.1
description = "My awesome package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Taj", email = "taj@test.com" }]
dependencies = [
  "requests>=2.32"
]

[project.urls]
Homepage = "https://github.com/you/repo"
